[package]
name = "smetrics-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
reqwest = { version="0.13.2", default-features = false, features=["default-tls", "json"] }
scraper = "0.26.0"
serde = {version="1.0.228", features=["derive"]}
serde_json = "1.0.149"
serde_yaml = "0.9.34"
tokio = { version = "1", features = ["full"] }
